--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         find Ecosia useful because for each time a person uses the search engine,
         a tree is planted.</h3>
     </div>
+
+    <div>
+      <h2>FAVORITE PEOPLE:</h2>
+      <h3>I have many people that I look up to. A few would include family
+        members such as my mom, my dad, and my older sister. Others would include
+        Elon Musk, and Ava DuVernay.
     <h6><button onclick="myCall(
          )">bye</button></h6>
 
