--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <div>
       <h2>FAVORITE PEOPLE:</h2>
       <h3>I have many people that I look up to. A few would include family
-        members such as my mom, my dad, and my older sister. Others would include
-        Elon Musk, and Ava DuVernay.</h3>
+        members such as my mom, my dad, my older sister, and my sister's boyfriend.
+        Others would include Elon Musk, and Ava DuVernay.</h3>
     </div>
     <h6><button onclick="myCall(
          )">bye</button></h6>
